--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <div class="div-block-2">
       <div class="div-block-4"></div>
       <h1 class="heading-3">#cute Instagram Bios</h1>
-<img src="https://cdn.pixabay.com/photo/2019/10/06/14/50/girl-4530426_1280.jpg" width="432" srcset="https://cdn.pixabay.com/photo/2019/10/06/14/50/girl-4530426_1280.jpg 500w, https://cdn.pixabay.com/photo/2019/10/06/14/50/girl-4530426_1280.jpg 1080w, https://cdn.pixabay.com/photo/2019/10/06/14/50/girl-4530426_1280.jpg 1280w" sizes="(max-width: 479px) 92vw, 432px" alt="" class="image-3"/>
+<img src="1280.jpg" width="432" srcset="1280.jpg 500w, 1280.jpg 1080w, 1280.jpg 1280w" sizes="(max-width: 479px) 92vw, 432px" alt="" class="image-3"/>
       <div class="div-block-4"></div>
       <div class="rich w-richtext">
          <ul>
