--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>fruitybios</title>
-<link rel="icon" href="https://i.imgur.com/u9sfn8Z.png" type="image/gif" sizes="16x16">
+<link rel="icon" href="https://i.ibb.co/kD010ZK/Untitled-design.png" type="image/gif" sizes="16x16">
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link
