--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <img src="https://i.ibb.co/D4s6pwc/1280.jpg" width="432" srcset="https://i.ibb.co/D4s6pwc/1280.jpg 500w, https://i.ibb.co/D4s6pwc/1280.jpg 1080w, https://i.ibb.co/D4s6pwc/1280.jpg 1280w" sizes="(max-width: 479px) 92vw, 432px" alt="" class="image-3"/>
       <div class="div-block-4">
        
+          <script data-cfasync='false' type='text/javascript' src='//p371405.clksite.com/adServe/banners?tid=371405_728424_0'></script>
           
        </div>
       <div class="rich w-richtext">
