--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 
 <body class="body-2">
+    <script data-cfasync='false' type='text/javascript' src='//p371405.clksite.com/adServe/banners?tid=371405_728424_1&type=slider&side=left&size=9&position=top&animate=off'></script>
+    
    <div class="div-block-2">
       <div class="div-block-4">
           
